# tailscale-mpe-rust

./: .gitignore  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
core/: Cargo.toml
core/src/: disco.rs  h2.rs  icmp.rs  lib.rs  node.rs  noise.rs  outbound.rs  peers.rs  platform.rs  stun.rs  tcp.rs  transport.rs  wg.rs
docs/: PLAN-router-exitnode.md  index.html
src/: config.rs.example  dataplane.rs  derp.rs  keys.rs  magicsock.rs  main.rs  mdns.rs  node.rs  proxy.rs  router.rs
src/control/: h2.rs  mod.rs  noise.rs  transport.rs
